--- a/korgac/korgacagent.desktop
+++ b/korgac/korgacagent.desktop
@@ -1,15 +1,19 @@
 [Desktop Entry]
 Name=Reminder Daemon
+Name[et]=Meeldetuletuste deemon
 Name[ia]=Demone de Memento
 Name[nl]=Herinneringsdaemon
 Name[pt]=Servidor de Chamadas de Atenção
+Name[sv]=Påminnelsedemon
 Name[uk]=Фонова служба нагадування
 Name[x-test]=xxReminder Daemonxx
 Name[zh_TW]=提醒守護程式
 Comment=Event and task reminder daemon
+Comment[et]=Sündmuste ja ülesannete meeldetuletuste deemon
 Comment[ia]=Demone de memento pro carga e evento
 Comment[nl]=Herinneringsdaemon voor evenementen en taken
 Comment[pt]=Servidor de chamada de atenção dos eventos e tarefas
+Comment[sv]=Påminnelsedemon för händelser och uppgifter
 Comment[uk]=Фонова служба нагадування про події і завдання
 Comment[x-test]=xxEvent and task reminder daemonxx
 Comment[zh_TW]=事件與工作提醒守護程式
